# heartbit

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  daemon-dev.toml.example  dashboard.html  docker-compose.yml  heartbit.toml  install.md  install.sh  llms.md  telegram-test.toml.example
.github/workflows/: ci.yml  release.yml
crates/heartbit/: Cargo.toml
crates/heartbit-cli/: Cargo.toml
crates/heartbit-cli/src/: daemon.rs  main.rs  serve.rs  submit.rs
crates/heartbit-cockpit/: Cargo.toml
crates/heartbit-cockpit/src/: callbacks.rs  main.rs  runtime.rs
crates/heartbit-cockpit/src/bridge/: command.rs  state.rs
crates/heartbit-cockpit/ui/: main.slint
crates/heartbit-cockpit/ui/components/: agent_card.slint  approval_banner.slint  blackboard_entry.slint  chat_message.slint  question_banner.slint  stats_bar.slint
crates/heartbit/examples/: custom_tool.rs  mcp_agent.rs  simple_agent.rs
crates/heartbit/src/: config.rs  error.rs  lib.rs  util.rs  workspace.rs
crates/heartbit/src/agent/: audit.rs  blackboard.rs  blackboard_tools.rs  context.rs  events.rs  guardrail.rs  instructions.rs  mod.rs  observability.rs  orchestrator.rs  permission.rs  pruner.rs  routing.rs  token_estimator.rs  tool_filter.rs  workflow.rs
crates/heartbit/src/agent/guardrails/: compose.rs  content_fence.rs  injection.rs  llm_judge.rs  mod.rs  pii.rs  sensor_security.rs  tool_policy.rs
crates/heartbit/src/auth/: jwt.rs  mod.rs
crates/heartbit/src/channel/: bridge.rs  mod.rs  session.rs  types.rs
crates/heartbit/src/channel/telegram/: access.rs  adapter.rs  bridge.rs  config.rs  delivery.rs  extract.rs  keyboard.rs  mod.rs  router.rs  transcribe.rs
crates/heartbit/src/daemon/: core.rs  cron.rs  heartbit_pulse.rs  kafka.rs  metrics.rs  mod.rs  notify.rs  store.rs  todo.rs  types.rs
crates/heartbit/src/eval/: mod.rs
crates/heartbit/src/knowledge/: chunker.rs  in_memory.rs  loader.rs  mod.rs  tools.rs
crates/heartbit/src/llm/: anthropic.rs  cascade.rs  error_class.rs  mod.rs  openrouter.rs  pricing.rs  retry.rs  types.rs
crates/heartbit/src/lsp/: client.rs  language.rs  mod.rs  server.rs  types.rs
crates/heartbit/src/memory/: bm25.rs  consolidation.rs  embedding.rs  hybrid.rs  in_memory.rs  mod.rs  namespaced.rs  postgres.rs  pruning.rs  reflection.rs  scoring.rs  shared_tools.rs  tools.rs
crates/heartbit/src/sensor/: manager.rs  metrics.rs  mod.rs  routing.rs  stories.rs
crates/heartbit/src/sensor/compression/: mod.rs  rules.rs
crates/heartbit/src/sensor/perception/: mod.rs  perceivers.rs
crates/heartbit/src/sensor/sources/: audio.rs  image.rs  jmap.rs  mcp.rs  mod.rs  rss.rs  weather.rs  webhook.rs
crates/heartbit/src/sensor/triage/: audio.rs  context.rs  email.rs  image.rs  mod.rs  rss.rs  structured.rs  webhook.rs
crates/heartbit/src/store/: mod.rs  postgres.rs
crates/heartbit/src/tool/: a2a.rs  mcp.rs  mod.rs
crates/heartbit/src/tool/builtins/: bash.rs  edit.rs  file_tracker.rs  glob.rs  grep.rs  list.rs  mod.rs  patch.rs  question.rs  read.rs  skill.rs  todo.rs  webfetch.rs  websearch.rs  write.rs
crates/heartbit/src/workflow/: agent_service.rs  agent_workflow.rs  blackboard.rs  budget.rs  circuit_breaker.rs  mod.rs  orchestrator_workflow.rs  scheduler.rs  types.rs
crates/heartbit/tests/: sensor_pipeline_e2e.rs
deploy/: heartbit-report.service  heartbit-report.timer  heartbit-worker.service
docs/: PLAN.md
gateway/: .env.example  config.example.yaml  launch.sh  smoke-test.sh  start.sh
tests/: advanced_e2e.sh  browser_e2e.sh  chat_e2e.sh  daemon_e2e.sh  features_e2e.sh  features_e2e_ask.toml  features_e2e_deny_bash.toml  mcp_e2e.sh  sensor_e2e.sh  squad_e2e.sh  squad_e2e.toml  ws_e2e.sh
