[workspace]
resolver = "2"
members = ["crates/heartbit", "crates/heartbit-cli"]

[workspace.package]
version = "2026.228.1"
authors = ["Pascal Le Clech <pascal@heartbit.ai>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/heartbit-ai/heartbit"
homepage = "https://github.com/heartbit-ai/heartbit"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
bytes = "1"
futures = "0.3"
toml = "0.8"
restate-sdk = "0.8"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
jsonschema = "0.28"
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = "0.29"
walkdir = "2"
regex = "1"
a2a-sdk = "0.7.0"
rdkafka = { version = "0.37", features = ["cmake-build", "tokio"] }
axum = { version = "0.8", features = ["ws"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
cron = "0.13"
prometheus = { version = "0.14", default-features = false }
quick-xml = "0.37"
pgvector = { version = "0.4", features = ["sqlx"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
base64 = "0.22"
teloxide = { version = "0.17", features = ["macros"] }
dotenvy = "0.15"
fastembed = { version = "5" }
jsonwebtoken = "9"
