[package]
name = "heartbit-cli"
version.workspace = true
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for the Heartbit multi-agent runtime"
keywords = ["agent", "llm", "cli", "mcp", "ai"]

[[bin]]
name = "heartbit"
path = "src/main.rs"

[dependencies]
heartbit = { path = "../heartbit", features = ["full"] }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
restate-sdk = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
axum = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
prometheus = { workspace = true }
rdkafka = { workspace = true }
teloxide = { workspace = true }
dotenvy = { workspace = true }
base64 = { workspace = true }

[features]
local-embedding = ["heartbit/local-embedding"]
