[package]
name = "heartbit-cockpit"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "heartbit-cockpit"
path = "src/main.rs"

[dependencies]
heartbit = { path = "../heartbit" }
slint = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
arboard = "3.6"

[build-dependencies]
slint-build = "1.15"
