[package]
name = "heartbit"
version.workspace = true
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Multi-agent runtime with LLM orchestration, MCP tools, and durable execution"
keywords = ["agent", "llm", "mcp", "orchestration", "ai"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
toml = { workspace = true }
restate-sdk = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
glob = { workspace = true }
jsonschema = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
a2a-sdk = { workspace = true }
rdkafka = { workspace = true }
cron = { workspace = true }
tokio-util = { workspace = true }
prometheus = { workspace = true }
quick-xml = { workspace = true }
pgvector = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
subtle = { workspace = true }
base64 = { workspace = true }
teloxide = { workspace = true, optional = true }

[features]
telegram = ["teloxide"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
