[package]
name = "heartbit"
version.workspace = true
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Multi-agent runtime with LLM orchestration, MCP tools, and durable execution"
keywords = ["agent", "llm", "mcp", "orchestration", "ai"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
# --- Core (always available) ---
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
glob = { workspace = true }
jsonschema = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
tokio-util = { workspace = true }

# --- Optional (feature-gated) ---
rdkafka = { workspace = true, optional = true }
restate-sdk = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
pgvector = { workspace = true, optional = true }
a2a-sdk = { workspace = true, optional = true }
cron = { workspace = true, optional = true }
prometheus = { workspace = true, optional = true }
quick-xml = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
subtle = { workspace = true, optional = true }
teloxide = { workspace = true, optional = true }
fastembed = { workspace = true, optional = true }

[features]
default = ["core"]
core = []
kafka = ["dep:rdkafka"]
daemon = ["kafka", "dep:cron", "dep:prometheus"]
sensor = ["daemon", "dep:quick-xml", "dep:hmac", "dep:sha2", "dep:hex", "dep:subtle"]
restate = ["dep:restate-sdk"]
postgres = ["dep:sqlx", "dep:pgvector"]
a2a = ["dep:a2a-sdk"]
telegram = ["dep:teloxide"]
local-embedding = ["dep:fastembed"]
full = ["daemon", "sensor", "restate", "postgres", "a2a", "telegram"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
